--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,13 @@
     <color name="color_282525">#282525</color>
     <color name="color_7C7877">#7C7877</color>
     <color name="color_FF6200">#FF6200</color>
+    <color name="color_FF6200_10">#10FF6200</color>
+
+    <color name="color_B4785B">#B4785B</color>
+    <color name="color_B77A5C">#B77A5C</color>
+
+    <color name="color_111111">#111111</color>
+
     <color name="color_FF5050">#FF5050</color>
     <color name="color_FF6300">#FF6300</color>
     <color name="color_FF6400">#FF6400</color>
@@ -49,7 +56,7 @@
 
     <color name="color_666">#666666</color>
 
-
+    <color name="color_883F17">#883F17</color>
 
 
 
