--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,6 +50,8 @@
     <color name="color_3e7dfb">#3e7dfb</color>
     <color name="color_8D99AE">#8D99AE</color>
 
+    <color name="color_1D1E2A">#FF1D1E2A</color>
+
     <color name="color_1C95D7">#1C95D7</color>
     <color name="color_694FF0">#694FF0</color>
     <color name="color_F26F30">#F26F30</color>
