--- a/app/src/main/res/layout/activity_tequan.xml
+++ b/app/src/main/res/layout/activity_tequan.xml
@@ -49,4 +49,11 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/toolbar_title"/>
 </RelativeLayout>
