--- a/app/src/main/res/layout/activity_tequan.xml
+++ b/app/src/main/res/layout/activity_tequan.xml
@@ -56,4 +56,64 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/toolbar_title"/>
+
+    <ImageView
+        android:id="@+id/iv_sanjiao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/sanjiao"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="40dp"
+        android:layout_below="@+id/recyclerview"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/iv_sanjiao"
+        android:background="@drawable/bg_topround10dp_white"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/color_282525"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:layout_marginTop="30dp"
+            android:text="获取条件"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/color_7C7877"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="10dp"
+            android:text="全体会员均可享受"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/color_282525"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:layout_marginTop="22dp"
+            android:text="权益介绍"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/color_7C7877"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="10dp"
+            android:lineSpacingExtra="10dp"
+            android:text="1、趣鲜蜂会员可在APP定期参与充值赠送活动。\n2、充值的米粒可在APP中使用，充值米粒和赠送米粒金额均不可提现。"/>
+    </LinearLayout>
 </RelativeLayout>
