--- a/app/src/main/res/layout/pickerview_custom_time_dialog.xml
+++ b/app/src/main/res/layout/pickerview_custom_time_dialog.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/ll_content"
-    android:background="@drawable/bg_topround20dp_white"
+    android:background="@drawable/bg_round10dp_white"
+    android:paddingBottom="10dp"
     android:orientation="vertical">
 
     <LinearLayout
