--- a/app/src/main/res/layout/popop_window_trade_list.xml
+++ b/app/src/main/res/layout/popop_window_trade_list.xml
@@ -71,14 +71,41 @@
         </LinearLayout>
     </com.bee.user.widget.RadioGroupPlus>
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:textColor="@color/color_7C7877"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:text="2020/01/01 —— 2020/07/30"/>
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="@color/color_7C7877"
+            android:layout_gravity="center_horizontal"
+            android:text="2020/01/01"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="@color/color_7C7877"
+            android:layout_gravity="center_horizontal"
+            android:text=" —— "/>
+
+        <TextView
+            android:id="@+id/tv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="@color/color_7C7877"
+            android:layout_gravity="center_horizontal"
+            android:text="2020/07/30"/>
+
+    </LinearLayout>
+
 
 
     <TextView
