--- a/app/src/main/res/layout/item_viewpager_membercenter_2.xml
+++ b/app/src/main/res/layout/item_viewpager_membercenter_2.xml
@@ -14,6 +14,7 @@
         android:text="绿蜂会员"
         android:textSize="15sp"
         android:layout_marginTop="50dp"
+        android:textStyle="bold"
         android:textColor="@color/color_883F17"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="米粒值达500可升级，可享受更多权益"
         android:textSize="11sp"
+        android:textStyle="bold"
         android:layout_marginTop="14dp"
         android:textColor="@color/color_883F17"
         app:layout_constraintLeft_toLeftOf="parent"
