--- a/app/src/main/res/layout/empty_trade_list.xml
+++ b/app/src/main/res/layout/empty_trade_list.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:id="@+id/ll_emptyview"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/ll_emptyview"
-        android:layout_width="match_parent"
-        android:layout_height="370dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/bg_round10dp_white"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
 
 
         <TextView
@@ -20,11 +12,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
+            android:layout_marginTop="20dp"
             android:drawableTop="@drawable/bg_kongbai8"
             android:drawablePadding="10dp"
             android:gravity="center"
             android:lineSpacingMultiplier="1.2"
             android:text="无可用优惠券"
+            android:textStyle="bold"
             android:textColor="@color/color_3B3838"
             android:textSize="15sp"
             android:visibility="visible" />
@@ -47,28 +41,10 @@
             android:layout_marginRight="72dp"
             android:background="@drawable/btn_stroke_yellow"
             android:gravity="center"
+            android:textStyle="bold"
             android:text="去随便逛逛"
             android:textColor="@color/FF6200"
             android:textSize="17sp" />
-    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="15dp"
-        android:textColor="@color/color_282525"
-        android:text="配送卡(3)"/>
-
-    <include layout="@layout/item_orderdetail_head_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/bg_round10dp_white"
-        android:layout_marginBottom="40dp"/>
 
 </LinearLayout>
