--- a/app/src/main/res/layout/item_ordering.xml
+++ b/app/src/main/res/layout/item_ordering.xml
@@ -12,7 +12,7 @@
         android:paddingRight="15dp"
         android:paddingLeft="15dp"
         android:paddingTop="17dp"
-        android:paddingBottom="27dp"
+        android:paddingBottom="17dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -25,6 +25,7 @@
             android:drawableRight="@drawable/icon_link"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
+            android:textStyle="bold"
             android:textColor="@color/color_282525"
             android:textSize="17sp"/>
 
@@ -36,6 +37,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"/>
 
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/recyclerview"
+            android:background="@color/color_F5F5F5"/>
 
+        <include layout="@layout/item_ordering_des"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/line"/>
     </RelativeLayout>
 </FrameLayout>
