--- a/app/src/main/res/layout/fragment_nearby_list.xml
+++ b/app/src/main/res/layout/fragment_nearby_list.xml
@@ -38,19 +38,10 @@
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"/>-->
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swiperefresh"
+    <include layout="@layout/crecyclerview_base"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:layout_below="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+        android:layout_below="@+id/tv_title"/>
 </RelativeLayout>
