--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,23 +46,6 @@
                     android:paddingRight="10dp">
 
 
-                    <TextView
-                        android:id="@+id/tv_dingwei"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/icon_dingwe_bai"
-                        android:drawablePadding="8dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="30dp"
-                        android:text="上海市"
-                        android:drawableRight="@drawable/icon_xiangxiaxuanze"
-                        android:singleLine="true"
-                        android:ellipsize="end"
-                        android:textColor="@color/white"
-                        android:textSize="16sp" />
-
-
-
 
 
                     <RelativeLayout
@@ -89,6 +72,26 @@
                             android:background="@drawable/cycle"
                             android:gravity="center" />
                     </RelativeLayout>
+
+
+                    <TextView
+                        android:id="@+id/tv_dingwei"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/rl_unread"
+                        android:drawableLeft="@drawable/icon_dingwe_bai"
+                        android:drawablePadding="8dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="100dp"
+                        android:text="上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市"
+                        android:drawableRight="@drawable/icon_xiangxiaxuanze"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
+
+
+
                 </RelativeLayout>
 
                 <LinearLayout
