--- a/app/src/main/res/layout/item_nearby_store_food.xml
+++ b/app/src/main/res/layout/item_nearby_store_food.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¥12"
+        android:textStyle="bold"
         android:textSize="12sp"
         android:layout_marginTop="10dp"
         android:textColor="@color/color_FF5050"/>
