--- a/app/src/main/res/layout/head_activity_food_comment2.xml
+++ b/app/src/main/res/layout/head_activity_food_comment2.xml
@@ -9,6 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="90dp">
 
         <ImageView
@@ -172,7 +173,7 @@
         <!--                android:text="¥10"/>-->
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_food_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -187,7 +188,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_food_title"
             android:layout_marginTop="6dp"
             android:textColor="@color/color_7C7877"
             android:textStyle="bold"
