--- a/app/src/main/res/layout/dialog_ordering_choose_time.xml
+++ b/app/src/main/res/layout/dialog_ordering_choose_time.xml
@@ -31,7 +31,7 @@
     <com.bee.user.widget.RadioGroupPlus
         android:id="@+id/buttons"
         android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="56dp">
 
         <LinearLayout
