--- a/app/src/main/res/layout/head_ordering.xml
+++ b/app/src/main/res/layout/head_ordering.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,9 +12,9 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/bg_round10dp_white"
         android:paddingLeft="15dp"
-        android:paddingTop="17dp"
+        android:paddingTop="18dp"
         android:paddingRight="15dp"
-        android:paddingBottom="27dp">
+        android:paddingBottom="18dp">
 
 
         <TextView
@@ -64,28 +65,39 @@
             android:textColor="@color/FF6200"
             android:textSize="13sp" />
 
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@drawable/bg_round10dp_white"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv_paytype"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_time"
-            android:layout_marginTop="20dp"
             android:text="支付方式"
             android:textStyle="bold"
             android:textColor="@color/color_282525"
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/tv_paytype_keyong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_time"
-            android:layout_alignParentRight="true"
             android:textStyle="bold"
-            android:layout_marginTop="20dp"
             android:gravity="center_vertical"
             android:text="可用米粒 1000"
             android:textColor="@color/FF6200"
             android:textSize="13sp" />
 
-    </RelativeLayout>
-</FrameLayout>
+    </LinearLayout>
+</LinearLayout>
