--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,12 +78,12 @@
                         android:id="@+id/tv_dingwei"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/rl_unread"
+                        android:layout_alignParentLeft="true"
                         android:drawableLeft="@drawable/icon_dingwe_bai"
                         android:drawablePadding="8dp"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="100dp"
-                        android:text="上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市上海市"
+                        android:text=""
                         android:drawableRight="@drawable/icon_xiangxiaxuanze"
                         android:singleLine="true"
                         android:ellipsize="end"
