--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -23,6 +23,7 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <ImageView
+                    android:id="@+id/tv_store_bg"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:scaleType="fitXY"
