--- a/app/src/main/res/layout/activity_helpcenter_item_item.xml
+++ b/app/src/main/res/layout/activity_helpcenter_item_item.xml
@@ -55,6 +55,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_help_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_282525"
@@ -71,6 +72,7 @@
             />
 
         <TextView
+            android:id="@+id/tv_help_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_3B3838"
